# shared/generated/swagger.json
@@ -564,6 +564,56 @@
 				}
 			}
 		},
+		"/towns/auth/authorize": {
+			"get": {
+				"operationId": "SpotifyAuthorize",
+				"responses": {
+					"204": {
+						"description": "No content"
+					},
+					"400": {
+						"description": "Invalid values specified",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/InvalidParametersError"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"towns"
+				],
+				"security": [],
+				"parameters": []
+			}
+		},
+		"/towns/auth/callback": {
+			"get": {
+				"operationId": "SpotifyCallback",
+				"responses": {
+					"204": {
+						"description": "No content"
+					},
+					"400": {
+						"description": "Invalid values specified",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/InvalidParametersError"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"towns"
+				],
+				"security": [],
+				"parameters": []
+			}
+		},
 		"/towns/{townID}/posterSessionArea": {
 			"post": {
 				"operationId": "CreatePosterSessionArea",
